--- a/0.Python.ipynb
+++ b/0.Python.ipynb
@@ -1472,7 +1472,7 @@
     "id": "ZRjNvNoBmES8"
    },
    "source": [
-    "<p dir=rtl style=\"direction: rtl;text-align: right;line-height:200%;font-family:vazir;font-size:medium\">\n",
+    "<p dir=ltr style=\"direction: ltr;text-align: right;line-height:200%;font-family:vazir;font-size:medium\">\n",
     "<font face=\"vazir\" size=4>\n",
     "    </font>\n",
     "    </div>\n",
@@ -7620,7 +7620,8 @@
    "cell_type": "markdown",
    "id": "f289c70b-d672-41ec-b1a2-ad1e2ba2b29a",
    "metadata": {
-    "id": "ZRjNvNoBmES8"
+    "id": "ZRjNvNoBmES8",
+    "tags": []
    },
    "source": [
     "<p dir=rtl style=\"direction: rtl;text-align: right;line-height:200%;font-family:vazir;font-size:medium\">\n",
